# seer

./: .gitignore  Cargo.toml  INVESTOR_OVERVIEW.md  README.md  ROADMAP.md  Trunk.toml  index.html  package-lock.json  package.json
contracts/: AINOTES.md  NOTES.md  README.md
contracts/contract_types/: Cryptocurrency Contract Architecture Design.md  README.md
contracts/wallet_gen/: Cargo.toml
contracts/wallet_gen/src/: Cargo.toml  lib.rs  zcash.rs
src/: app.rs  main.rs
src-tauri/: Cargo.toml  build.rs  lib.rs  tauri.conf.json
src-tauri/src/: main.rs
src/components/: create_account.rs  sign_in.rs
src/pages/: contacts.rs  contracts.rs  mod.rs  network.rs
src/scripts/: main.js
src/scripts/db/: README.md  accountdb.js  createdb.js
src/scripts/status/: comment.js  post.js  profile.js
src/utils/: filter.rs
src/utils/contexts/: feed_context.rs  login_context.rs  posts_context.rs
