[package]
name = "seer-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew-router = { git = "https://github.com/yewstack/yew.git" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
gloo = "0.11.0"
yew-ethereum-provider = { git = "https://github.com/monomadic/yew-ethereum-provider" }
sled = "0.34.7"
chrono = "0.4.39"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "InputEvent",
  "Storage",
  "Location",
] }



[workspace]
members = ["src-tauri","contracts/wallet_gen"]

[dependencies.getrandom]
version = "0.2"
features = ["js"]